@@ -1,3 +1,7 @@
+2013-03-13  Jesper Öqvist <jesper.oqvist@cs.lth.se>
+
+    * Improved attribute expansion warnings
+
 2013-03-05  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
     * Whitespace does not break a parenthesized variable name
